# CMake-Examples

./: README.md
01.Basic/A.HelloCMake/: CMakeLists.txt  HelloCMake.cpp
01.Basic/B.StaticLibrary/: CMakeLists.txt
01.Basic/B.StaticLibrary/include/: Message.hpp
01.Basic/C.SharedLibrary/: CMakeLists.txt
01.Basic/D.If-else-endif/: CMakeLists.txt
01.Basic/E.BuildType/: CMakeLists.txt
01.Basic/E.BuildType/src/: HelloCMake.cpp  Message.cpp
01.Basic/F.SetCompileFlags/: CMakeLists.txt
01.Basic/F.SetCompileFlags/include/: GeometryPolygon.hpp  GeometryRhombus.hpp
01.Basic/F.SetCompileFlags/src/: ComputeAreas.cpp  GeometryCircle.cpp
01.Basic/G.SetCXXLanguageStandard/: CMakeLists.txt
01.Basic/G.SetCXXLanguageStandard/include/: Animal.hpp  Cat.hpp  Dog.hpp
01.Basic/G.SetCXXLanguageStandard/src/: Animal.cpp  AnimalFarm.cpp  Cat.cpp  Dog.cpp
01.Basic/H.Foreach-endforeach/: CMakeLists.txt
01.Basic/H.Foreach-endforeach/include/: GeometryCircle.hpp  GeometrySquare.hpp
01.Basic/H.Foreach-endforeach/src/: GeometryPolygon.cpp  GeometryRhombus.cpp  GeometrySquare.cpp
